# Fibo-Edit

./: .gitignore  README.md  pyproject.toml
scripts/: example_edit.py  finetune_fibo_edit.py  fuse_lora.py
src/: README.md  edit_promptify.py  example_edit.py  fibo_edit_vlm.py
src/fibo_edit/: edit_promptify.py  finetune_utils.py  vae_config.json
src/vgl/: __init__.py  registry.py  vgl.py
src/vgl/config/fibo_edit/: final_prompt.txt  input_schema.txt  system_prompt.txt
src/vgl/config/fibo_edit_mask/: final_prompt.txt  input_schema.txt  output_schema.json  system_prompt.txt
src/vgl/core/: __init__.py  base_executor.py
src/vgl/core/executors/: __init__.py  fibo_edit_executor.py
src/vgl/core/utils/: caption_processor.py  image_processor.py  validator.py
src/vgl/gateway/: llm_gateway.py
src/vgl/gateway/model_config/: base_model_config.py
src/vgl/models/: __init__.py  base_model.py  edit_model.py  schama_builder.py
