[project]
name = "fibo-edit"
version = "0.1.0"
description = "Fibo Edit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boltons>=25.0.0",
    "litellm>=1.80.16",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "ujson>=5.11.0",
    "diffusers",
    "accelerate",
    "protobuf>=6.33.4",
    "sentencepiece",
    "transformers",
    "torch",
    "torchvision",
    "datasets>=4.5.0",
    "peft>=0.18.1",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }

[build-system]
requires = ["uv_build>=0.7,<0.8"]
build-backend = "uv_build"